# sparsecoder

./: LICENSE  Makefile  sparesecoder.cabal
src/AI/: SparseCoder.hs
test/: test.hs
