name: sparsecoder
version: 0.0.0
license: MIT
author: David Hinkes
build-type: Simple
cabal-version: >= 1.2

library
  build-depends: base >=4, hmatrix >= 0.11, random >= 0
  hs-source-dirs: src
  exposed-modules: AI.SparseCoder
  --ghc-options: -prof -O2 -auto-all -caf-all -fforce-recomp

executable test
  main-is: test.hs
  hs-source-dirs: test src
  --ghc-options: -prof -O2 -auto-all -caf-all -fforce-recomp
